--- a/styles.css
+++ b/styles.css
@@ -67,14 +67,15 @@ nav ul li a:hover {
 /* Hero section styles */
 
 
-/* .imgback {
-    width: 100vw;
-    height: 60vh;
-    display: block;
-    margin-left: -75px;
-    margin-top: -60px;
-    object-fit: cover;
-} */
+#hero {
+    background-image: url('./assets/web.jpg');
+    background-size: cover; /* Ensures the image covers the entire section */
+    background-position: center; /* Centers the image */
+    height: 50vh; /* Adjust height as needed, here it's set to full viewport height */
+    width: 100%; /* Ensures the width is 100% of the parent/container */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
+} 
+
 
 
 .hero h1 {
@@ -100,6 +101,24 @@ h2 {
 }
 
 /* Services styles */
+
+.service-logo {
+    width: 200px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions for hover effects */
+}
+
+/* Hover effects */
+.service-logo:hover {
+    transform: scale(1.05); /* Slightly enlarges the image on hover */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Adds a shadow on hover */
+    cursor: pointer; /* Changes the cursor to pointer on hover */
+}
+
+
+
 .services {
     display: flex;
     justify-content: space-around;
